# rag-practice

./: README.md  pyproject.toml
OneDrive/Desktop/major-rti/major rti/: .gitignore  CHiPS RTI & Research Report.docx  README.md  RTI_Implementation_Prompt-phase-2.docx  RTI_React_Implementation_Plan.md  download_rti_pdfs_selenium.py  dummy-spreder.txt  implementation_plan-phase1.md  implementation_plan-phase2&3.md  implementation_plan-phase2.md  requirements.txt  rough.py  rough.txt  rti_ids.json  run.py  sample-rti-response.doc  unmatched_departments.json
OneDrive/Desktop/major-rti/major rti/01_preprocessing/: README.md  diagnose_stage1.py  requirements_stage1.txt  run_stage1.py  run_stage2.py  test_stage1.py
OneDrive/Desktop/major-rti/major rti/02_optimization/: optimize.py  spellv2.py
OneDrive/Desktop/major-rti/major rti/backend/: README.md  ai_provider.py  audit_logger.py  db.py  disclosure_balancer.py  document_parser.py  exemption_rules.py  export_report.py  extractor.py  legal_sections.py  llm_analyzer.py  main.py  ocr.py  pyproject.toml  rag_engine.py  recommendation_generator.py  requirements.txt  response_letter.py  routing.py  sarvam_client.py
OneDrive/Desktop/major-rti/major rti/data/: RTI_Intelligence_System_Architecture.docx  arch.txt  benchmark_results.json  departments.json  dept_embeddings.json  legal_sections.json  parsed_sample.json  rti_act_sections.json  rti_decision_RTI_CHiPS_2026_UH0RE33V.txt  rti_sections_embeddings.json  sample_rtis.json
data/text_file/: ml.txt  sample.txt
notebook/: document.ipynb
(+208 files in other folders)
