[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

# Only allow Python 3.11.x
requires-python = ">=3.11,<3.12"

dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.1",
]
